/**
 * 
 */
package com.ram.java.designpatterns.objectpool;

/**
 * This is the Object Pool abstract Interface
 */
public interface Poolable {

	/**
	 * Defines the behaviour for resetting the internal state.
	 */
	void reset();
}
